test: VirtualThread